# groq-fact-checker

./: .replit  README.md  app.py  pyproject.toml  requirements.txt
migrations/versions/: 450ba8ec753e_add_veracity_assessment_and_.py
templates/: about.html  claim_detail.html  index.html  news.html  results.html
